--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,21 @@
+//------- Responsive -------//
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
+//------- Style for Register and Login Page-----------//
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -18,7 +36,6 @@
       color: #5d5b8d;
       font-weight: bold;
       font-size: 24px;
-
     }
 
     .title {
@@ -72,7 +89,6 @@
 }
 
 //------- Style for Home page-----------//
-
 .home{
   background-color: #a7bcff;
   height: 100vh;
@@ -87,11 +103,15 @@
     height: 85%;
     display: flex;
     overflow: hidden;
+    @include tablet {
+      width: 90%;
+    }
 
     .sideBar{
       flex: 1;
       border-right: 1px solid #3e3c61;
       background-color: #3e3c61;
+      position: relative;
       .navbar {
         display: flex;
         align-items: center;
@@ -103,6 +123,9 @@
 
         .logo {
           font-weight: bold;
+          @include tablet {
+            display: none;
+          }
         }
 
         .user {
@@ -123,6 +146,10 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
+            @include tablet {
+              position: absolute;
+              bottom: 10px;
+            }
           }
         }
 
